modules/vpc/igw.tf
# Internet Gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name       = "VPC-IG"
    Managed_By = "terraform"
  }
}
